--- a/index.css
+++ b/index.css
@@ -4,16 +4,17 @@ body {
   font-family: "Mansalva", cursive;
 }
 
-img {
-  outline: 1px solid green;
+.status {
+  margin: 0;
+  text-align: center;
+  font-size: 3rem;
 }
 
-.status {
-  min-height: 5rem;
-  width: auto;
-  padding: 2rem 0;
-  text-align: center;
-  font-size: 4rem;
+.align-status {
+  outline: 1px solid black;
+  padding: 1rem 0 0 0;
+  width: 100%;
+  min-height: 8rem;
 }
 
 .main {
