--- a/index.css
+++ b/index.css
@@ -4,6 +4,10 @@ body {
   font-family: "Mansalva", cursive;
 }
 
+img {
+  outline: 1px red solid;
+}
+
 .status {
   margin: 0;
   text-align: center;
@@ -11,13 +15,12 @@ body {
 }
 
 .align-status {
-  outline: 1px solid black;
-  padding: 1rem 0 0 0;
+  padding: 2rem 0 0 0;
   width: 100%;
   min-height: 8rem;
 }
 
-.main {
+.page {
   display: flex;
   flex-direction: column;
 }
@@ -33,6 +36,12 @@ body {
   margin: auto;
 }
 
+.dog {
+  position: relative;
+  width: 16rem;
+}
+
+.dog > img,
 .gato > img {
   position: absolute;
 }
@@ -52,13 +61,9 @@ body {
   list-style: none;
 }
 
-.footer {
-  margin: auto;
-  text-align: center;
-}
-
 .start-button {
   z-index: 100;
+  float: right;
   width: 10rem;
   height: 4rem;
   border: 3px solid black;
@@ -71,7 +76,7 @@ body {
 }
 
 .start-button:hover {
-  background-color: orange;
+  background-color: #ffeb3b;
 }
 
 button:disabled {
