--- a/index.css
+++ b/index.css
@@ -4,9 +4,13 @@ body {
   font-family: "Mansalva", cursive;
 }
 
-img {
-  border: 1px solid black;
+svg {
+  transition: all 0.5s ease;
 }
+
+/* img {
+  border: 1px solid black;
+} */
 
 .page {
   display: flex;
@@ -110,7 +114,7 @@ button:disabled {
   text-align: center;
 }
 
-@media only screen and (min-width: 1200px) {
+@media all and (min-width: 900px) {
   .page {
     display: flex;
     flex-direction: row;
