--- a/index.css
+++ b/index.css
@@ -2,7 +2,6 @@ html,
 body {
   margin: 0;
   font-family: "Mansalva", cursive;
-  /* overflow: hidden; */
 }
 
 svg {
@@ -12,6 +11,8 @@ svg {
 .page {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
+  height: 100vh;
 }
 
 .main {
@@ -25,18 +26,21 @@ svg {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: aquamarine;
+  background-color: #64ffda;
+  width: 100vw;
+  padding: 3rem 0;
 }
 
 .status {
-  text-align: center;
-  font-size: 2.6rem;
-  height: 8rem;
+  height: 10rem;
+  font-size: 2.8rem;
+  padding: 0 2rem;
 }
 
 .start-button {
-  width: 10rem;
+  min-width: 10rem;
   height: 4rem;
+  padding: 0 2rem;
   margin-bottom: 3rem;
   border: 3px solid black;
   box-shadow: 6px 5px;
@@ -48,7 +52,15 @@ svg {
 }
 
 .start-button:hover {
-  background-color: #ffeb3b;
+  background-color: #fbc02d;
+}
+
+.start-button:focus {
+  outline: none;
+}
+
+.start-button:hover {
+  cursor: pointer;
 }
 
 button:disabled {
@@ -72,13 +84,9 @@ button:disabled {
   width: 100%; /* fixes for firefox and IE */
 }
 
-.center {
-  margin: auto;
-}
-
 .shells {
   width: 25rem;
-  margin-left: 2rem;
+  margin-left: 3rem;
   margin-top: -6rem;
   display: block;
   position: relative;
@@ -90,14 +98,6 @@ button:disabled {
   height: 8rem;
 }
 
-.start-button:focus {
-  outline: none;
-}
-
-.start-button:hover {
-  cursor: pointer;
-}
-
 .hide {
   display: none;
 }
@@ -106,29 +106,29 @@ button:disabled {
   transform-origin: top left;
 }
 
-.footer {
-  text-align: center;
-}
-
-@media all and (min-width: 900px) {
+/* Show different layout on large viewports */
+@media all and (min-width: 1000px) {
   .page {
     display: flex;
     flex-direction: row;
-    padding: 0;
   }
 
-  .status {
-    width: 20vw;
-    height: 50vh;
+  .sidebar,
+  .main {
+    padding: 3rem 0 0 0;
   }
 
   .sidebar {
+    width: 25vw;
     height: 100vh;
-    padding: 3rem;
-    margin: 0;
   }
 
   .main {
     width: 70vw;
+  }
+
+  .status {
+    text-align: center;
+    height: 26rem;
   }
 }
